// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Nav Button correctly renders when disabled prop is true 1`] = `
<button
  aria-disabled={true}
  aria-label={undefined}
  className="viewer--components--inline-nav-button is-goNext is-not-enabled"
  onClick={[Function]}
>
  testTitle
</button>
`;

exports[`Inline Nav Button correctly renders when type prop is goNext 1`] = `
<button
  aria-disabled={false}
  aria-label={undefined}
  className="viewer--components--inline-nav-button is-goNext is-enabled"
  onClick={[Function]}
>
  testTitle
</button>
`;

exports[`Inline Nav Button correctly renders when type prop is goPrev 1`] = `
<button
  aria-disabled={false}
  aria-label={undefined}
  className="viewer--components--inline-nav-button is-goPrev is-enabled"
  onClick={[Function]}
>
  testTitle
</button>
`;
